# fantasy-tool

./: README.md  pyproject.toml
.github/workflows/: refresh-data.yml
docs/: index.html
docs/charts/: example-trend.html
docs/css/: site.css
docs/data/: manifest.json
docs/data/examples/: rankings.json  trend-chart.json
docs/data/qb/: rankings.json
docs/data/rb/: rankings.json  season-composite.json
docs/data/te/: rankings.json
docs/data/wr/: rankings.json  scatter.json  season-composite.json  weekly-opportunity.json  weekly-production.json
docs/js/: charts.js  config.js  rankings.js  tables.js
docs/tables/: example-rankings.html  qb-rankings.html  rb-rankings.html  te-rankings.html  wr-rankings.html
src/: __init__.py  run.py
src/algorithms/: __init__.py  common.py  example_ranking.py  normalize.py  predictive_ranking.py  qb_score.py  rb_ranking.py  rb_score.py  te_score.py  wr_ranking.py  wr_score.py
src/config/: scoring.py
src/export/: __init__.py  json_writer.py
src/loaders/: nfl_data.py
