[project]
name = "fantasy-tool"
version = "0.1.0"
description = "Fantasy football stats pipeline and static reference site"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "nflreadpy>=0.1.5",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
